<resources>
    <string name="app_name">108590002_HW6_04.2</string>
    <string name="Chocolate_syrup">Chocolate syrup</string>
    <string name="Sprinkles">Sprinkles</string>
    <string name="Crushed_nuts">Crushed nuts</string>
    <string name="Cherries">Cherries</string>
    <string name="Orio_cookie_crumbles">Orio cookie crumbles</string>
    <string name="show">SHOW TOAST</string>

</resources>